--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{secrets.DOCKER_HUB_USERNAME}}
-          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}
+          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
       - name: setup Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
