--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/nest-starter:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neststarter:latest
       - name: image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
