--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Cache Docker Layer
+        uses: action/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+           ${{ runner.os }}-buildx-
       - name: checkout repo
         uses: actions/checkout@v2
 
@@ -26,6 +33,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: johnbabu021/nest-starter:latest
+          cache-from: type=local,dest=/tmp/.buildx-cache
+          cache-to: type=local,det=/tmp/.buildx-cache
       - name: image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
